--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ analytics:
 # Site Author
 author:
   name             : "Harveen Singh Chadha"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : /assets/images/bio/harveen.png"
   bio              : "Data Scientist at Thoughtworks."
   location         : "India"
   email            :
