--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   - title: "About Me"
     url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   - title: "Articles"
-    url: https://mmistakes.github.io/minimal-mistakes/about/
+    url: /nlp/
   - title: "Open Source"
     url: /year-archive/
   - title: "Courses and Books"
