--- a/_config.yml
+++ b/_config.yml
@@ -275,6 +275,15 @@ defaults:
       comments: # true
       share: true
       related: true
+defaults:
+  # _nlp
+  - scope:
+      path: ""
+      type: nlp
+    values:
+      layout: single
+      author_profile: false
+      share: true
 
 
 # Collections
