--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ teaser                   : # path of fallback teaser image, e.g. "/assets/images
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
-words_per_minute         : 200
+words_per_minute         : 160
 comments:
   provider               : #"disqus", "discourse", "facebook" # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "custom"
   disqus:
@@ -275,15 +275,33 @@ defaults:
       comments: # true
       share: true
       related: true
+      show_date: true
+
 defaults:
-  # _nlp
+  # _pages
   - scope:
       path: ""
-      type: nlp
+      type: pages
     values:
       layout: single
-      author_profile: false
-      share: true
+
+defaults:
+  # _foo
+  - scope:
+      path: ""
+      type: foo
+    values:
+      layout: single
+
+# defaults:
+#   # _nlp
+#   - scope:
+#       path: ""
+#       type: nlp
+#     values:
+#       layout: single
+#       author_profile: false
+#       share: true
 
 
 # Collections
